# avr-dot-games

./: .gitignore  Cargo.toml  LICENSE  README.md  avr-atmega328p.json  flash.sh
.cargo/: config.toml
src/: common.rs  components.rs  lib.rs  main.rs
src/games/: mod.rs  selection.rs  snake.rs  traits.rs
src/peripherals/: inputs.rs  joystick_ps2.rs  mod.rs  random.rs
src/peripherals/max7219/: dot.rs  dot_display.rs  dot_screen.rs  mod.rs
