[package]
name = "dot_games"
version = "0.1.0"
authors = ["boggy"]
edition = "2018"

[[bin]]
name = "dot_games"
test = false

[lib]
name = "dot_games"
path = "src/lib.rs"
test = false

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.dev.package."*"]
codegen-units = 1
opt-level = "z"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = 2

[dependencies]
arraydeque = { version = "0.4", default-features = false  }
nb = "1.0"
panic-halt = "0.2"
rand_core = "0.5"
ufmt = "0.1"

[dependencies.arduino-uno]
git = "https://github.com/Rahix/avr-hal"
